# mle-training

./: .gitignore  Exercises - Housing price prediction.ipynb  Housing price prediction.ipynb  README.md  README.md:Zone.Identifier  env.yml  house-price-prediction ML flow.py  nonstandardcode.py  nonstandardcode.py:Zone.Identifier
Housing_Price/: README.md  setup.cfg  setup.py
Housing_Price/Score/: Evaluation_Metrics.txt
Housing_Price/docker_assignment/: Dockerfile  final_script_ml_flow.py  ingest_data.py  train.py
Housing_Price/docs/source/: conf.py
Housing_Price/final_script/: final_script_ml_flow.py
Housing_Price/src/Housing_scripts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Housing_Price/src/housing_scripts/: final_script_ml_flow.py  ingest_data.py  score.py  train.py
Housing_Price/tests/functional_tests/: model_file_test.py  score_file_test.py
Housing_Price/tests/initial_tests/: basic_test.py
Housing_Price/tests/unit_tests/: ingest_data_test.py  score_test.py  train_data_test.py
mlruns/0/: meta.yaml
mlruns/0/00ecdba069ff44b99f07d05223c169dc/: meta.yaml
mlruns/0/558700677ed44ca5ac68130813a14186/: meta.yaml
mlruns/0/6183d65e5aef41f29d09996948fb4add/: meta.yaml
mlruns/0/92ab127ccf9d4880bc6c57c48efea5bc/: meta.yaml
mlruns/0/9f97dc405a404d608357e77282a24f0b/: meta.yaml
packaging_tutorial/: README.md  pyproject.toml
packaging_tutorial/src/example_package_YOUR_USERNAME_HERE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
packaging_tutorial/src/example_package_sakshi_dhyani.egg-info/: PKG-INFO  SOURCES.txt
(+56 files in other folders)
